NXP-6560: fix the tabbed mode of users view

--- a/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/view_user_template.xhtml
+++ b/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/view_user_template.xhtml
@@ -28,7 +28,7 @@
         <p class="directoryBack">
           <h:commandLink immediate="true"
             value="#{messages['command.directoryBack']}"
-            action="view_users" />
+            action="#{userManagerActions.viewUsers}" />
         </p>
       </h:form>
 
