--- a/nuxeo-distribution-dm/ftest/selenium/tests/testVocabulariesManagement.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/testVocabulariesManagement.html
@@ -48,108 +48,33 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Vocabularies</td>
-	<td></td>
-</tr>
-<tr>
-	<td>assertTitle</td>
-	<td>Nuxeo DM - Vocabularies</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyElementPresent</td>
-	<td>link=continent</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyElementPresent</td>
-	<td>link=country</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyElementPresent</td>
-	<td>link=topic</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyElementPresent</td>
-	<td>link=subtopic</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyElementPresent</td>
-	<td>link=subject</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyElementPresent</td>
-	<td>link=sort_order</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyElementPresent</td>
-	<td>link=search_operators</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyElementPresent</td>
-	<td>link=predicates</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyElementPresent</td>
-	<td>link=inverse_predicates</td>
+	<td>link=Nuxeo Admin Center</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=continent</td>
+	<td>link=Vocabularies</td>
 	<td></td>
 </tr>
 <tr>
-	<td>assertTitle</td>
-	<td>Nuxeo DM - continent</td>
-	<td></td>
+  <td>assertSelectOptions</td>
+  <td>//select[@name='selectDirectoryForm:directoriesList']</td>
+  <td>continent,country,topic,subtopic,subject,sort_order,search_operators,predicates,inverse_predicates,language,nature,external gadget list,oauthTokens</td>
 </tr>
 <tr>
-	<td>verifyText</td>
-	<td>viewDirectoryEntries:nxl_vocabulary:nxw_vocabulary_id</td>
-	<td>africa</td>
-</tr>
-<tr>
-	<td>verifyText</td>
-	<td>viewDirectoryEntries:nxl_vocabulary:nxw_vocabulary_label</td>
-	<td>label.directories.continent.africa</td>
-</tr>
-<tr>
-	<td>verifyText</td>
-	<td>viewDirectoryEntries:nxl_vocabulary:nxw_vocabulary_obsolete_no</td>
-	<td>No</td>
-</tr>
-<tr>
-	<td>verifyText</td>
-	<td>viewDirectoryEntries:nxl_vocabulary:nxw_vocabulary_order</td>
-	<td>10,000,000</td>
-</tr>
-<tr>
-	<td>verifyElementPresent</td>
-	<td>//input[@id=&quot;viewDirectoryEntries:nxl_vocabulary:nxl_vocabulary_editButton&quot;]</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyElementPresent</td>
-	<td>//input[@id=&quot;viewDirectoryEntries:nxl_vocabulary:nxl_vocabulary_deleteButton&quot;]</td>
+	<td>verifyTextPresent</td>
+	<td>continent</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyText</td>
 	<td>viewDirectoryEntries:nxl_vocabulary_1:nxw_vocabulary_id_1</td>
-	<td>antarctica</td>
+	<td>africa</td>
 </tr>
 <tr>
 	<td>verifyText</td>
 	<td>viewDirectoryEntries:nxl_vocabulary_1:nxw_vocabulary_label_1</td>
-	<td>label.directories.continent.antarctica</td>
+	<td>label.directories.continent.africa</td>
 </tr>
 <tr>
 	<td>verifyText</td>
@@ -172,8 +97,48 @@
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>//input[@id=&quot;viewDirectoryEntries:nxl_vocabulary_1:nxl_vocabulary_1_editButton&quot;]</td>
+	<td>verifyText</td>
+	<td>viewDirectoryEntries:nxl_vocabulary_2:nxw_vocabulary_id_2</td>
+	<td>antarctica</td>
+</tr>
+<tr>
+	<td>verifyText</td>
+	<td>viewDirectoryEntries:nxl_vocabulary_2:nxw_vocabulary_label_2</td>
+	<td>label.directories.continent.antarctica</td>
+</tr>
+<tr>
+	<td>verifyText</td>
+	<td>viewDirectoryEntries:nxl_vocabulary_2:nxw_vocabulary_obsolete_2_no</td>
+	<td>No</td>
+</tr>
+<tr>
+	<td>verifyText</td>
+	<td>viewDirectoryEntries:nxl_vocabulary_2:nxw_vocabulary_order_2</td>
+	<td>10,000,000</td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
+	<td>//input[@id=&quot;viewDirectoryEntries:nxl_vocabulary_2:nxl_vocabulary_2_editButton&quot;]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
+	<td>//input[@id=&quot;viewDirectoryEntries:nxl_vocabulary_2:nxl_vocabulary_2_deleteButton&quot;]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>watchA4jRequests</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>//input[@id=&quot;viewDirectoryEntries:nxl_vocabulary_2:nxl_vocabulary_2_editButton&quot;]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForA4jRequest</td>
+	<td>10000</td>
 	<td></td>
 </tr>
 <tr>
@@ -197,8 +162,18 @@
 	<td>label.directories.continent.antarctica.modified</td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
+	<td>watchA4jRequests</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
 	<td>//input[@value=&quot;Save&quot;]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForA4jRequest</td>
+	<td>10000</td>
 	<td></td>
 </tr>
 <tr>
@@ -208,12 +183,22 @@
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>viewDirectoryEntries:nxl_vocabulary_1:nxw_vocabulary_label_1</td>
+	<td>viewDirectoryEntries:nxl_vocabulary_2:nxw_vocabulary_label_2</td>
 	<td>label.directories.continent.antarctica.modified</td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>//input[@id=&quot;viewDirectoryEntries:nxl_vocabulary_1:nxl_vocabulary_1_editButton&quot;]</td>
+	<td>watchA4jRequests</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>//input[@id=&quot;viewDirectoryEntries:nxl_vocabulary_2:nxl_vocabulary_2_editButton&quot;]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForA4jRequest</td>
+	<td>10000</td>
 	<td></td>
 </tr>
 <tr>
@@ -222,13 +207,23 @@
 	<td>label.directories.continent.antarctica</td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
+	<td>watchA4jRequests</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
 	<td>//input[@value=&quot;Save&quot;]</td>
 	<td></td>
 </tr>
 <tr>
+	<td>waitForA4jRequest</td>
+	<td>10000</td>
+	<td></td>
+</tr>
+<tr>
 	<td>verifyText</td>
-	<td>viewDirectoryEntries:nxl_vocabulary_1:nxw_vocabulary_label_1</td>
+	<td>viewDirectoryEntries:nxl_vocabulary_2:nxw_vocabulary_label_2</td>
 	<td>label.directories.continent.antarctica</td>
 </tr>
 <tr>
@@ -237,18 +232,38 @@
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
+	<td>watchA4jRequests</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
 	<td>link=Add a new vocabulary entry</td>
 	<td></td>
 </tr>
 <tr>
+	<td>waitForA4jRequest</td>
+	<td>10000</td>
+	<td></td>
+</tr>
+<tr>
 	<td>type</td>
-	<td>addEntryForm:nxl_vocabulary:nxw_vocabulary_id</td>
+	<td>addEntryView:addEntryForm:nxl_vocabulary:nxw_vocabulary_id</td>
 	<td>africa</td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
+	<td>watchA4jRequests</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
 	<td>//input[@value=&quot;Create&quot;]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForA4jRequest</td>
+	<td>10000</td>
 	<td></td>
 </tr>
 <tr>
@@ -258,22 +273,32 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>addEntryForm:nxl_vocabulary:nxw_vocabulary_id</td>
+	<td>addEntryView:addEntryForm:nxl_vocabulary:nxw_vocabulary_id</td>
 	<td>aatlantide</td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>addEntryForm:nxl_vocabulary:nxw_vocabulary_label</td>
+	<td>addEntryView:addEntryForm:nxl_vocabulary:nxw_vocabulary_label</td>
 	<td>label.continent.atlantide</td>
 </tr>
 <tr>
 	<td>click</td>
-	<td>addEntryForm:nxl_vocabulary:nxw_vocabulary_obsolete_checkbox:1</td>
+	<td>addEntryView:addEntryForm:nxl_vocabulary:nxw_vocabulary_obsolete_checkbox:1</td>
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
+	<td>watchA4jRequests</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
 	<td>//input[@value=&quot;Create&quot;]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForA4jRequest</td>
+	<td>10000</td>
 	<td></td>
 </tr>
 <tr>
@@ -283,32 +308,42 @@
 </tr>
 <tr>
 	<td>assertText</td>
-	<td>viewDirectoryEntries:nxl_vocabulary:nxw_vocabulary_id</td>
+	<td>viewDirectoryEntries:nxl_vocabulary_1:nxw_vocabulary_id_1</td>
 	<td>aatlantide</td>
 </tr>
 <tr>
 	<td>assertText</td>
-	<td>viewDirectoryEntries:nxl_vocabulary:nxw_vocabulary_label</td>
+	<td>viewDirectoryEntries:nxl_vocabulary_1:nxw_vocabulary_label_1</td>
 	<td>label.continent.atlantide</td>
 </tr>
 <tr>
 	<td>assertText</td>
-	<td>viewDirectoryEntries:nxl_vocabulary:nxw_vocabulary_obsolete_yes</td>
+	<td>viewDirectoryEntries:nxl_vocabulary_1:nxw_vocabulary_obsolete_1_yes</td>
 	<td>Yes</td>
 </tr>
 <tr>
 	<td>assertText</td>
-	<td>viewDirectoryEntries:nxl_vocabulary:nxw_vocabulary_order</td>
+	<td>viewDirectoryEntries:nxl_vocabulary_1:nxw_vocabulary_order_1</td>
 	<td>10,000,000</td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>//input[@id=&quot;viewDirectoryEntries:nxl_vocabulary:nxl_vocabulary_deleteButton&quot;]</td>
+	<td>watchA4jRequests</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>//input[@id=&quot;viewDirectoryEntries:nxl_vocabulary_1:nxl_vocabulary_1_deleteButton&quot;]</td>
 	<td></td>
 </tr>
 <tr>
 	<td>assertConfirmation</td>
 	<td>Delete selected vocabulary entry?</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForA4jRequest</td>
+	<td>10000</td>
 	<td></td>
 </tr>
 <tr>
@@ -318,12 +353,17 @@
 </tr>
 <tr>
 	<td>assertText</td>
-	<td>viewDirectoryEntries:nxl_vocabulary:nxw_vocabulary_id</td>
+	<td>viewDirectoryEntries:nxl_vocabulary_1:nxw_vocabulary_id_1</td>
 	<td>africa</td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>//input[@id=&quot;viewDirectoryEntries:nxl_vocabulary:nxl_vocabulary_deleteButton&quot;]</td>
+	<td>watchA4jRequests</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>//input[@id=&quot;viewDirectoryEntries:nxl_vocabulary_1:nxl_vocabulary_1_deleteButton&quot;]</td>
 	<td></td>
 </tr>
 <tr>
@@ -332,18 +372,13 @@
 	<td></td>
 </tr>
 <tr>
+	<td>waitForA4jRequest</td>
+	<td>10000</td>
+	<td></td>
+</tr>
+<tr>
 	<td>verifyTextPresent</td>
 	<td>This entry is referenced in another vocabulary</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=Back to the list</td>
-	<td></td>
-</tr>
-<tr>
-	<td>assertTitle</td>
-	<td>Nuxeo DM - Vocabularies</td>
 	<td></td>
 </tr>
 <tr>
