NXP-6416: change Selenium tests

--- a/nuxeo-distribution-dm/ftest/selenium/tests/testVocabulariesManagement.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/testVocabulariesManagement.html
@@ -57,13 +57,58 @@
 	<td></td>
 </tr>
 <tr>
-  <td>assertSelectOptions</td>
-  <td>//select[@name='selectDirectoryForm:directoriesList']</td>
-  <td>continent,country,topic,subtopic,subject,sort_order,search_operators,predicates,inverse_predicates,language,nature,external gadget list,oauthTokens</td>
+	<td>verifyTextPresent</td>
+	<td>continent</td>
+	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>continent</td>
+	<td>country</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>topic</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>subtopic</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>subject</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>sort_order</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>search_operators</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>predicates</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>inverse_predicates</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>language</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>nature</td>
 	<td></td>
 </tr>
 <tr>
