--- a/nuxeo-platform-signature-distribution/ftest/selenium/tests/suite.html
+++ b/nuxeo-platform-signature-distribution/ftest/selenium/tests/suite.html
@@ -8,10 +8,10 @@
 <body>
 <table id="suiteTable" cellpadding="1" cellspacing="1" border="1" class="selenium"><tbody>
 <tr><td><b>Test Suite</b></td></tr>
-<tr><td><a href="signature/createWorkspace.html">createCertificate</a></td></tr>
-<tr><td><a href="signature/importPDF">importPDF</a></td></tr>
-<tr><td><a href="signature/signPDF">signPDF</a></td></tr>
-<tr><td><a href="signature/cleanUP">cleanUP</a></td></tr>
+<tr><td><a href="signature/createUsers.html">Create Users</a></td></tr>
+<tr><td><a href="signature/createWorkspace.html">Create Workspace</a></td></tr>
+<tr><td><a href="signature/importPDF">Import PDF</a></td></tr>
+<tr><td><a href="signature/signPDF">Sign PDF</a></td></tr>
 </tbody></table>
 </body>
 </html>
