--- a/nuxeo-platform-signature-distribution/ftest/selenium/tests/signature/createUsers.html
+++ b/nuxeo-platform-signature-distribution/ftest/selenium/tests/signature/createUsers.html
@@ -11,7 +11,6 @@
 <thead>
 <tr><td rowspan="1" colspan="3">createUsers</td></tr>
 </thead><tbody>
-<!--@Test groups:CreateUsers,introduction|depends:CreateStructure-->
 <tr>
 	<td>setTimeout</td>
 	<td>120000</td>
@@ -80,17 +79,17 @@
 <tr>
 	<td>type</td>
 	<td>//input[@id='createUser:nxl_user:nxw_firstPassword']</td>
-	<td>jdoe1</td>
+	<td>password</td>
 </tr>
 <tr>
 	<td>type</td>
 	<td>//input[@id='createUser:nxl_user:nxw_secondPassword']</td>
-	<td>jdoe1</td>
+	<td>password</td>
 </tr>
 <tr>
 	<td>type</td>
 	<td>//input[@id='createUser:nxl_user:nxw_email']</td>
-	<td>sg+jdoe@nuxeo.com</td>
+	<td>jdoe@localhost</td>
 </tr>
 <tr>
 	<td>watchA4jRequests</td>
@@ -140,361 +139,6 @@
 <tr>
 	<td>clickAndWait</td>
 	<td>link=Back to the list</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=Create a new user</td>
-	<td></td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>//input[@id='createUser:nxl_user:nxw_username']</td>
-	<td>jsmith</td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>//input[@id='createUser:nxl_user:nxw_firstname']</td>
-	<td>John</td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>//input[@id='createUser:nxl_user:nxw_lastname']</td>
-	<td>Smith</td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>//input[@id='createUser:nxl_user:nxw_company']</td>
-	<td>Nuxeo</td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>//input[@id='createUser:nxl_user:nxw_email']</td>
-	<td>sg+jsmith@nuxeo.com</td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>//input[@id='createUser:nxl_user:nxw_firstPassword']</td>
-	<td>jsmith1</td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>//input[@id='createUser:nxl_user:nxw_secondPassword']</td>
-	<td>jsmith1</td>
-</tr>
-<tr>
-	<td>watchA4jRequests</td>
-	<td></td>
-	<td></td>
-</tr>
-<tr>
-	<td>typeKeys</td>
-	<td>//input[@name='createUser:nxl_user:nxw_groups_suggest']</td>
-	<td>members</td>
-</tr>
-<tr>
-	<td>waitForA4jRequest</td>
-	<td>10000</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyText</td>
-	<td>//*[@id='createUser:nxl_user:nxw_groups_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
-	<td>members</td>
-</tr>
-<tr>
-	<td>watchA4jRequests</td>
-	<td></td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>//*[@id='createUser:nxl_user:nxw_groups_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
-	<td></td>
-</tr>
-<tr>
-	<td>waitForA4jRequest</td>
-	<td>10000</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>//input[@value='Save']</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>Smith</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=Back to the list</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=Create a new user</td>
-	<td></td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>//input[@id='createUser:nxl_user:nxw_username']</td>
-	<td>bree</td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>//input[@id='createUser:nxl_user:nxw_firstname']</td>
-	<td>Bree</td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>//input[@id='createUser:nxl_user:nxw_lastname']</td>
-	<td>Van de Kaamp</td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>//input[@id='createUser:nxl_user:nxw_company']</td>
-	<td>Nuxeo</td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>//input[@id='createUser:nxl_user:nxw_email']</td>
-	<td>sg+bree@nuxeo.com</td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>//input[@id='createUser:nxl_user:nxw_firstPassword']</td>
-	<td>bree1</td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>//input[@id='createUser:nxl_user:nxw_secondPassword']</td>
-	<td>bree1</td>
-</tr>
-<tr>
-	<td>watchA4jRequests</td>
-	<td></td>
-	<td></td>
-</tr>
-<tr>
-	<td>typeKeys</td>
-	<td>//input[@name='createUser:nxl_user:nxw_groups_suggest']</td>
-	<td>members</td>
-</tr>
-<tr>
-	<td>waitForA4jRequest</td>
-	<td>10000</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyText</td>
-	<td>//*[@id='createUser:nxl_user:nxw_groups_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
-	<td>members</td>
-</tr>
-<tr>
-	<td>watchA4jRequests</td>
-	<td></td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>//*[@id='createUser:nxl_user:nxw_groups_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
-	<td></td>
-</tr>
-<tr>
-	<td>waitForA4jRequest</td>
-	<td>10000</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>//input[@value='Save']</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>Bree</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=Back to the list</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=Create a new user</td>
-	<td></td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>//input[@id='createUser:nxl_user:nxw_username']</td>
-	<td>lbramard</td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>//input[@id='createUser:nxl_user:nxw_firstname']</td>
-	<td>Lucien</td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>//input[@id='createUser:nxl_user:nxw_lastname']</td>
-	<td>Bramard</td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>//input[@id='createUser:nxl_user:nxw_company']</td>
-	<td>Nuxeo</td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>//input[@id='createUser:nxl_user:nxw_firstPassword']</td>
-	<td>lbramard1</td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>//input[@id='createUser:nxl_user:nxw_secondPassword']</td>
-	<td>lbramard1</td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>//input[@id='createUser:nxl_user:nxw_email']</td>
-	<td>sg+lbramard@nuxeo.com</td>
-</tr>
-<tr>
-	<td>watchA4jRequests</td>
-	<td></td>
-	<td></td>
-</tr>
-<tr>
-	<td>typeKeys</td>
-	<td>//input[@name='createUser:nxl_user:nxw_groups_suggest']</td>
-	<td>members</td>
-</tr>
-<tr>
-	<td>waitForA4jRequest</td>
-	<td>10000</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyText</td>
-	<td>//*[@id='createUser:nxl_user:nxw_groups_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
-	<td>members</td>
-</tr>
-<tr>
-	<td>watchA4jRequests</td>
-	<td></td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>//*[@id='createUser:nxl_user:nxw_groups_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
-	<td></td>
-</tr>
-<tr>
-	<td>waitForA4jRequest</td>
-	<td>10000</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>//input[@value='Save']</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>Bramard</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=Back to the list</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=Create a new user</td>
-	<td></td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>//input[@id='createUser:nxl_user:nxw_username']</td>
-	<td>linnet</td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>//input[@id='createUser:nxl_user:nxw_firstname']</td>
-	<td>Linnet</td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>//input[@id='createUser:nxl_user:nxw_lastname']</td>
-	<td>Scavo</td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>//input[@id='createUser:nxl_user:nxw_company']</td>
-	<td>Nuxeo</td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>//input[@id='createUser:nxl_user:nxw_firstPassword']</td>
-	<td>linnet1</td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>//input[@id='createUser:nxl_user:nxw_secondPassword']</td>
-	<td>linnet1</td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>//input[@id='createUser:nxl_user:nxw_email']</td>
-	<td>sg+linnet@nuxeo.com</td>
-</tr>
-<tr>
-	<td>watchA4jRequests</td>
-	<td></td>
-	<td></td>
-</tr>
-<tr>
-	<td>typeKeys</td>
-	<td>//input[@name='createUser:nxl_user:nxw_groups_suggest']</td>
-	<td>members</td>
-</tr>
-<tr>
-	<td>waitForA4jRequest</td>
-	<td>10000</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyText</td>
-	<td>//*[@id='createUser:nxl_user:nxw_groups_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
-	<td>members</td>
-</tr>
-<tr>
-	<td>watchA4jRequests</td>
-	<td></td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>//*[@id='createUser:nxl_user:nxw_groups_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
-	<td></td>
-</tr>
-<tr>
-	<td>waitForA4jRequest</td>
-	<td>10000</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>//input[@value='Save']</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>Scavo</td>
 	<td></td>
 </tr>
 <tr>
