NXP-6582 - restart fails under Windows

--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/sysinfo/hostInfo.xhtml
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/sysinfo/hostInfo.xhtml
@@ -9,7 +9,7 @@
  <h2><h:outputText value="#{messages['adminsubtab.sysinfo.hostserverinfo']}" /></h2>
  <script>
  function confirmRestart() {
-  return window.confirm("<h:outputText value="#{messages['label.restart.confirm']}" />?");
+  return window.confirm("<h:outputText value="#{messages['label.restart.confirm']}" />");
  }
  </script>
  <pre>
