--- a/nuxeo-platform-forms-layout-client/src/main/resources/web/nuxeo.war/widgets/complex_list_item_widget_template.xhtml
+++ b/nuxeo-platform-forms-layout-client/src/main/resources/web/nuxeo.war/widgets/complex_list_item_widget_template.xhtml
@@ -14,37 +14,79 @@
 </c:if>
 <c:if test="#{nxl:isLikeViewMode(widget.mode)}">
 
+  <c:set var="displaySubLabels" value="#{not widgetProperty_hideSubLabels}" />
+
   <table>
     <tbody>
-      <nxl:subWidget>
-        <tr>
-          <td class="labelColumn">
-            <h:outputText value="#{messages[widget.label]}" styleClass="labelColumn" />
-          </td>
-          <td class="fieldColumn">
-            <nxl:widget widget="#{widget}" value="#{value}" />
-          </td>
-        </tr>
-      </nxl:subWidget>
+      <c:choose>
+        <c:when test="#{widgetProperty_display == 'inline'}">
+          <tr>
+            <nxl:subWidget>
+              <td class="fieldColumn">
+                <c:if test="#{displaySubLabels}">
+                  <h:outputText value="#{messages[widget.label]}"
+                    styleClass="labelColumn" />
+                </c:if>
+                <nxl:widget widget="#{widget}" value="#{value}" />
+              </td>
+            </nxl:subWidget>
+          </tr>
+        </c:when>
+        <c:otherwise>
+          <nxl:subWidget>
+            <tr>
+              <c:if test="#{displaySubLabels}">
+                <td class="labelColumn">
+                  <h:outputText value="#{messages[widget.label]}" />
+                </td>
+              </c:if>
+              <td class="fieldColumn">
+                <nxl:widget widget="#{widget}" value="#{value}" />
+              </td>
+            </tr>
+          </nxl:subWidget>
+        </c:otherwise>
+      </c:choose>
     </tbody>
   </table>
 
 </c:if>
 <c:if test="#{widget.mode == 'edit'}">
 
+  <c:set var="displaySubLabels" value="#{not widgetProperty_hideSubLabels}" />
+
   <table>
     <tbody>
-      <nxl:subWidget>
-        <tr>
-          <td class="labelColumn">
-            <h:outputText value="#{messages[widget.label]}"
-              styleClass="labelColumn #{nxu:test(widget.required, 'required', '')}" />
-          </td>
-          <td class="fieldColumn">
-            <nxl:widget widget="#{widget}" value="#{value}" />
-          </td>
-        </tr>
-      </nxl:subWidget>
+      <c:choose>
+        <c:when test="#{widgetProperty_display == 'inline'}">
+          <tr>
+            <nxl:subWidget>
+              <td class="fieldColumn">
+                <c:if test="#{displaySubLabels}">
+                  <h:outputText value="#{messages[widget.label]}"
+                    styleClass="labelColumn #{nxu:test(widget.required, 'required', '')}" />
+                </c:if>
+                <nxl:widget widget="#{widget}" value="#{value}" />
+              </td>
+            </nxl:subWidget>
+          </tr>
+        </c:when>
+        <c:otherwise>
+          <nxl:subWidget>
+            <tr>
+              <c:if test="#{displaySubLabels}">
+                <td class="labelColumn">
+                  <h:outputText value="#{messages[widget.label]}"
+                    styleClass="#{nxu:test(widget.required, 'required', '')}" />
+                </td>
+              </c:if>
+              <td class="fieldColumn">
+                <nxl:widget widget="#{widget}" value="#{value}" />
+              </td>
+            </tr>
+          </nxl:subWidget>
+        </c:otherwise>
+      </c:choose>
     </tbody>
   </table>
 
