--- a/nuxeo-platform-forms-layout-client/src/main/resources/web/nuxeo.war/widgets/list_subwidget_template.xhtml
+++ b/nuxeo-platform-forms-layout-client/src/main/resources/web/nuxeo.war/widgets/list_subwidget_template.xhtml
@@ -27,28 +27,53 @@
 </c:if>
 <c:if test="#{nxl:isLikeViewMode(widget.mode)}">
 
+  <c:set var="displaySubLabels" value="#{not widgetProperty_hideSubLabels}" />
+
   <table>
     <tbody>
       <nxu:inputList value="#{field}" id="#{widget.id}_table" model="submodel"
         rendered="#{not empty field}">
-        <nxl:subWidget>
-          <tr>
-            <td class="labelColumn">
-              <h:outputText value="#{messages[widget.label]}" styleClass="labelColumn" />
-            </td>
-            <td class="fieldColumn">
-              <nxl:widget widget="#{widget}" value="#{submodel.rowData}" />
-            </td>
-          </tr>
-        </nxl:subWidget>
+        <c:choose>
+          <c:when test="#{widgetProperty_display == 'inline'}">
+            <tr>
+              <nxl:subWidget>
+                <td class="fieldColumn">
+                  <c:if test="#{displaySubLabels}">
+                    <h:outputText value="#{messages[widget.label]}"
+                      styleClass="labelColumn" />
+                  </c:if>
+                  <nxl:widget widget="#{widget}"
+                    value="#{submodel.rowData}" />
+                </td>
+              </nxl:subWidget>
+            </tr>
+          </c:when>
+          <c:otherwise>
+            <nxl:subWidget>
+              <tr>
+                <c:if test="#{displaySubLabels}">
+                  <td class="labelColumn">
+                    <h:outputText value="#{messages[widget.label]}" />
+                  </td>
+                </c:if>
+                <td class="fieldColumn">
+                  <nxl:widget widget="#{widget}"
+                    value="#{submodel.rowData}" />
+                </td>
+              </tr>
+            </nxl:subWidget>
+          </c:otherwise>
+        </c:choose>
       </nxu:inputList>
     </tbody>
   </table>
 
 </c:if>
 <c:if test="#{widget.mode == 'edit'}">
+
   <a4j:outputPanel ajaxRendered="true">
   
+    <c:set var="displaySubLabels" value="#{not widgetProperty_hideSubLabels}" />
     <c:set value="#{widget_0.fieldDefinitions[0].propertyName}/#{widget.fieldDefinitions[0].propertyName}"
       var="propValueForTemplate"/>
   
@@ -69,15 +94,43 @@
         </a4j:commandLink>
   
         <h:panelGroup>
-          <h:panelGrid columns="1">
-            <nxl:subWidget>
-              <h:outputText value="#{messages[widget.label]}"
-                styleClass="labelColumn #{nxu:test(widget.required, 'required', '')}" />
-              <nxl:widget widget="#{widget}"
-                value="#{submodel.rowData}" />
-            </nxl:subWidget>
-          </h:panelGrid>
-        </h:panelGroup>
+          <table>
+            <tbody>
+              <c:choose>
+                <c:when test="#{widgetProperty_display == 'inline'}">
+                  <tr>
+                    <nxl:subWidget>
+                      <td class="fieldColumn">
+                        <c:if test="#{displaySubLabels}">
+                          <h:outputText value="#{messages[widget.label]}"
+                            styleClass="labelColumn #{nxu:test(widget.required, 'required', '')}" />
+                        </c:if>
+                        <nxl:widget widget="#{widget}"
+                          value="#{submodel.rowData}" />
+                      </td>
+                    </nxl:subWidget>
+                  </tr>
+                </c:when>
+                <c:otherwise>
+                  <nxl:subWidget>
+                    <tr>
+                      <c:if test="#{displaySubLabels}">
+                        <td class="labelColumn">
+                          <h:outputText value="#{messages[widget.label]}"
+                            styleClass="#{nxu:test(widget.required, 'required', '')}" />
+                        </td>
+                      </c:if>
+                      <td class="fieldColumn">
+                        <nxl:widget widget="#{widget}"
+                          value="#{submodel.rowData}" />
+                      </td>
+                    </tr>
+                  </nxl:subWidget>
+                </c:otherwise>
+              </c:choose>
+            </tbody>
+          </table>
+        </h:panelGroup>  
 
       </h:panelGrid>
   
