--- a/nuxeo-platform-forms-layout-client/src/main/resources/web/nuxeo.war/widgets/list_widget_template.xhtml
+++ b/nuxeo-platform-forms-layout-client/src/main/resources/web/nuxeo.war/widgets/list_widget_template.xhtml
@@ -27,28 +27,51 @@
 </c:if>
 <c:if test="#{nxl:isLikeViewMode(widget.mode)}">
 
+  <c:set var="displaySubLabels" value="#{not widgetProperty_hideSubLabels}" />
+
   <table>
     <tbody>
       <nxu:inputList value="#{field}" id="#{widget.id}_table" model="model"
         rendered="#{not empty field}">
-        <nxl:subWidget>
-          <tr>
-            <td class="labelColumn">
-              <h:outputText value="#{messages[widget.label]}"
-                styleClass="labelColumn" />
-            </td>
-            <td class="fieldColumn">
-              <nxl:widget widget="#{widget}"
-                value="#{model.rowData}" />
-            </td>
-          </tr>
-        </nxl:subWidget>
+        <c:choose>
+          <c:when test="#{widgetProperty_display == 'inline'}">
+            <tr>
+              <nxl:subWidget>
+                <td class="fieldColumn">
+                  <c:if test="#{displaySubLabels}">
+                    <h:outputText value="#{messages[widget.label]}"
+                      styleClass="labelColumn" />
+                  </c:if>
+                  <nxl:widget widget="#{widget}"
+                    value="#{model.rowData}" />
+                </td>
+              </nxl:subWidget>
+            </tr>
+          </c:when>
+          <c:otherwise>
+            <nxl:subWidget>
+              <tr>
+                <c:if test="#{displaySubLabels}">
+                  <td class="labelColumn">
+                    <h:outputText value="#{messages[widget.label]}" />
+                  </td>
+                </c:if>
+                <td class="fieldColumn">
+                  <nxl:widget widget="#{widget}"
+                    value="#{model.rowData}" />
+                </td>
+              </tr>
+            </nxl:subWidget>
+          </c:otherwise>
+        </c:choose>
       </nxu:inputList>
     </tbody>
   </table>
 
 </c:if>
 <c:if test="#{widget.mode == 'edit'}">
+
+  <c:set var="displaySubLabels" value="#{not widgetProperty_hideSubLabels}" />
 
   <a4j:region renderRegionOnly="true" id="#{widget.id}_region">
     <a4j:outputPanel ajaxRendered="true">
@@ -72,15 +95,44 @@
           </a4j:commandLink>
   
           <h:panelGroup>
-            <h:panelGrid columns="1">
-              <nxl:subWidget>
-                <h:outputText value="#{messages[widget.label]}"
-                  styleClass="labelColumn #{nxu:test(widget.required, 'required', '')}" />
-                <nxl:widget widget="#{widget}"
-                  value="#{model.rowData}" />
-              </nxl:subWidget>
-            </h:panelGrid>
+            <table>
+              <tbody>
+                <c:choose>
+                  <c:when test="#{widgetProperty_display == 'inline'}">
+                    <tr>
+                      <nxl:subWidget>
+                        <td class="fieldColumn">
+                          <c:if test="#{displaySubLabels}">
+                            <h:outputText value="#{messages[widget.label]}"
+                              styleClass="labelColumn #{nxu:test(widget.required, 'required', '')}" />
+                          </c:if>
+                          <nxl:widget widget="#{widget}"
+                            value="#{model.rowData}" />
+                        </td>
+                      </nxl:subWidget>
+                    </tr>
+                  </c:when>
+                  <c:otherwise>
+                    <nxl:subWidget>
+                      <tr>
+                        <c:if test="#{displaySubLabels}">
+                          <td class="labelColumn">
+                            <h:outputText value="#{messages[widget.label]}"
+                              styleClass="#{nxu:test(widget.required, 'required', '')}" />
+                          </td>
+                        </c:if>
+                        <td class="fieldColumn">
+                          <nxl:widget widget="#{widget}"
+                            value="#{model.rowData}" />
+                        </td>
+                      </tr>
+                    </nxl:subWidget>
+                  </c:otherwise>
+                </c:choose>
+              </tbody>
+            </table>
           </h:panelGroup>  
+
         </h:panelGrid>
   
       </nxu:inputList>
