--- a/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/widgets/listing/listing_big_icon_type_widget_template.xhtml
+++ b/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/widgets/listing/listing_big_icon_type_widget_template.xhtml
@@ -3,7 +3,8 @@
   xmlns:f="http://java.sun.com/jsf/core"
   xmlns:nxu="http://nuxeo.org/nxweb/util"
   xmlns:nxl="http://nuxeo.org/nxforms/layout"
-  xmlns:h="http://java.sun.com/jsf/html">
+  xmlns:h="http://java.sun.com/jsf/html"
+  xmlns:nxp="http://nuxeo.org/nxweb/pdf">
 <c:if test="#{nxl:isLikePlainMode(widget.mode)}">#{field_2}</c:if>
 <c:if test="#{nxl:isLikeViewMode(widget.mode)}">
 
@@ -23,8 +24,11 @@
 
 </c:if>
 <c:if test="#{widget.mode == 'pdf'}">
-
-  <p:image value="#{nxd:iconPath(field_0)}" />
-
+  <nxp:html>
+    <nxu:graphicImage
+      value="#{nxd:iconPath(field_0)}" alt="#{field_2}" title="#{field_2}"
+      rendered="#{!empty nxd:iconPath(field_0)}"
+      styleClass="smallIcon" />
+  </nxp:html>
 </c:if>
 </f:subview>
