NXP-6416: disable tests on vocabularies management

--- a/nuxeo-distribution-dm/ftest/selenium/tests/suite2.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/suite2.html
@@ -180,9 +180,11 @@
     <tr>
       <td><a href="./publication/publishingTearDown.html">publishingTearDown</a></td>
     </tr>
+    <!-- Disabled, see NXP-6416
     <tr>
       <td><a href="./testVocabulariesManagement.html">testVocabulariesManagement</a></td>
     </tr>
+    -->
     <tr>
       <td><a href="./testMultipleDomainsDashboard.html">testMultipleDomainsDashboard</a></td>
     </tr>
