NXP-6416: force re-render vocabulary entries as a workaround for ajax rerender issues (see NXP-5725) + add ajax status when selecting vocabulary

--- a/nuxeo-platform-directory-web/src/main/resources/web/nuxeo.war/directory/view_directories.xhtml
+++ b/nuxeo-platform-directory-web/src/main/resources/web/nuxeo.war/directory/view_directories.xhtml
@@ -29,6 +29,13 @@
                 </a4j:support>
               </h:selectOneMenu>
             </td>
+            <td class="iconColumn">
+              <a4j:status>
+                <f:facet name="start">
+                  <h:graphicImage value="/img/standart_waiter.gif" />
+                </f:facet>
+              </a4j:status>
+            </td>
           </tr>
         </tbody>
       </table>
