--- a/nuxeo-platform-directory-web/src/main/resources/web/nuxeo.war/directory/view_directory.xhtml
+++ b/nuxeo-platform-directory-web/src/main/resources/web/nuxeo.war/directory/view_directory.xhtml
@@ -78,6 +78,7 @@
 
     </c:if>
 
+    <nxu:set var="forceReRender" value="true" forceCreate="true">
     <a4j:form rendered="#{!empty directoryUIActions.currentDirectoryEntries}"
       id="viewDirectoryEntries">
 
@@ -102,6 +103,7 @@
       </table>
 
     </a4j:form>
+    </nxu:set>
 
   </div>
 
