update project version to 5.4.2-SNAPSHOT; selenium corrections

--- a/nuxeo-platform-signature-distribution/ftest/selenium/tests/signature/createUsers.html
+++ b/nuxeo-platform-signature-distribution/ftest/selenium/tests/signature/createUsers.html
@@ -142,8 +142,8 @@
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=Log out</td>
+	<td>open</td>
+	<td>/nuxeo/logout</td>
 	<td></td>
 </tr>
 </tbody></table>
