--- a/nuxeo-platform-signature-distribution/ftest/selenium/tests/suite.html
+++ b/nuxeo-platform-signature-distribution/ftest/selenium/tests/suite.html
@@ -6,12 +6,14 @@
   <title>Test Suite</title>
 </head>
 <body>
-<table id="suiteTable" cellpadding="1" cellspacing="1" border="1" class="selenium"><tbody>
+<table id="suiteTable" cellpadding="1" cellspacing="1" border="1" class="selenium">
+<tbody>
 <tr><td><b>Test Suite</b></td></tr>
 <tr><td><a href="signature/createUsers.html">Create Users</a></td></tr>
 <tr><td><a href="signature/createWorkspace.html">Create Workspace</a></td></tr>
 <tr><td><a href="signature/importPDF">Import PDF</a></td></tr>
 <tr><td><a href="signature/signPDF">Sign PDF</a></td></tr>
-</tbody></table>
+</tbody>
+</table>
 </body>
 </html>
