--- a/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/widgets/listing/listing_title_link_widget_template.xhtml
+++ b/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/widgets/listing/listing_title_link_widget_template.xhtml
@@ -12,14 +12,16 @@
 
   <div class="popupTarget" docRef="#{field_1}">
 
-    <nxd:restDocumentLink document="#{field_0}">
+    <nxd:restDocumentLink document="#{field_0}"
+      tab="#{widgetProperty_tab}">
       <span id="title_#{field_1}" title="#{field_2}">
         #{nxd:titleOrId(field_0)}
       </span>
     </nxd:restDocumentLink>
 
     <nxd:restDocumentLink document="#{field_0}"
-      newConversation="true" target="_blank">
+      newConversation="true" target="_blank"
+      tab="#{widgetProperty_tab}">
       <nxu:graphicImage value="/icons/external.gif"
         style="vertical-align:middle"
         alt="#{messages['permalink.newTab']}"
