--- a/nuxeo-user-dashboard/nuxeo-user-dashboard-jsf/src/main/resources/web/nuxeo.war/incl/dashboard/user_jsf_dashboard.xhtml
+++ b/nuxeo-user-dashboard/nuxeo-user-dashboard-jsf/src/main/resources/web/nuxeo.war/incl/dashboard/user_jsf_dashboard.xhtml
@@ -5,7 +5,7 @@
   xmlns:nxd="http://nuxeo.org/nxweb/document"
   xmlns:nxu="http://nuxeo.org/nxweb/util">
 
-  <c:if test="#{domains.size() > 1}">
+  <c:if test="#{userDomains.size() > 1}">
   
     <h:panelGrid columns="1">
       <div class="dashboardDomainSelection">
@@ -13,10 +13,10 @@
           <h:outputText value="#{messages['label.selectDashboardDomain']}" />
           <h:selectOneMenu value="#{jsfDashboardActions.selectedDomainId}"
             id="selectDashboardDomainMenu">
-            <nxu:selectItems value="#{domains}" var="domain"
+            <nxu:selectItems value="#{userDomains}" var="domain"
               itemValue="#{domain.id}" itemLabel="#{nxd:titleOrId(domain)}" />
           </h:selectOneMenu>
-          <h:commandButton action="#{jsfDashboardActions.submitSelectedDomainChange}"
+          <h:commandButton
             value="#{messages['command.changeDashboardSelectedDomain']}"
             styleClass="button"
             id="dashboardDomainSubmitButton" />
@@ -28,7 +28,7 @@
   
   </c:if>
 
-  <table cellspacing="10" class="dashboardItemTable">
+  <table cellspacing="20">
     <tbody>
       <tr>
         <td width="50%">
