NXP-6295: fixing selenium test suite

--- a/nuxeo-platform-signature-distribution/ftest/selenium/tests/signature/importPDF.html
+++ b/nuxeo-platform-signature-distribution/ftest/selenium/tests/signature/importPDF.html
@@ -70,7 +70,7 @@
 <tr>
 	<td>type</td>
 	<td>importFileRichUploadForm:upload:file</td>
-	<td>/tmp/original.pdf</td>
+	<td>/tmp/how_to_create_a_connector_290310.pdf</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
