--- a/nuxeo-platform-signature-distribution/ftest/selenium/tests/suite.html
+++ b/nuxeo-platform-signature-distribution/ftest/selenium/tests/suite.html
@@ -11,8 +11,8 @@
 <tr><td><b>Test Suite</b></td></tr>
 <tr><td><a href="signature/createUsers.html">Create Users</a></td></tr>
 <tr><td><a href="signature/createWorkspace.html">Create Workspace</a></td></tr>
-<tr><td><a href="signature/importPDF">Import PDF</a></td></tr>
-<tr><td><a href="signature/signPDF">Sign PDF</a></td></tr>
+<tr><td><a href="signature/importPDF.html">Import PDF</a></td></tr>
+<tr><td><a href="signature/signPDF.html">Sign PDF</a></td></tr> 
 </tbody>
 </table>
 </body>
