NXP-4936: add listing widget types + improve preview

--- a/ftest/selenium/tests/testCheckboxWidget.html
+++ b/ftest/selenium/tests/testCheckboxWidget.html
@@ -83,12 +83,12 @@
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
-	<td>link=Checkbox widget</td>
+	<td>link=Checkbox</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Checkbox widget</td>
+	<td>link=Checkbox</td>
 	<td></td>
 </tr>
 <tr>
