--- a/ftest/selenium/tests/testMenu.html
+++ b/ftest/selenium/tests/testMenu.html
@@ -29,57 +29,57 @@
 </tr>
 <tr>
 	<td>verifyNotVisible</td>
-	<td>link=Textarea widget</td>
+	<td>link=Textarea</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyNotVisible</td>
-	<td>link=Text widget</td>
+	<td>link=Text</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyNotVisible</td>
-	<td>link=Int widget</td>
+	<td>link=Int</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyNotVisible</td>
-	<td>link=Secret widget</td>
+	<td>link=Secret</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyNotVisible</td>
-	<td>link=Datetime widget</td>
+	<td>link=Datetime</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyNotVisible</td>
-	<td>link=File widget</td>
+	<td>link=File</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyNotVisible</td>
-	<td>link=Htmltext widget</td>
+	<td>link=Htmltext</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyNotVisible</td>
-	<td>link=SelectOneDirectory widget</td>
+	<td>link=Vocabulary</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyNotVisible</td>
-	<td>link=SelectManyDirectory widget</td>
+	<td>link=Multiple vocabulary</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyNotVisible</td>
-	<td>link=Checkbox widget</td>
+	<td>link=Checkbox</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyNotVisible</td>
-	<td>link=List widget</td>
+	<td>link=List</td>
 	<td></td>
 </tr>
 <tr>
@@ -89,58 +89,113 @@
 </tr>
 <tr>
 	<td>waitForVisible</td>
-	<td>link=Text widget</td>
+	<td>link=Text</td>
 	<td>1000</td>
 </tr>
 <tr>
 	<td>waitForVisible</td>
-	<td>link=Textarea widget</td>
+	<td>link=Textarea</td>
 	<td>1000</td>
 </tr>
 <tr>
 	<td>waitForVisible</td>
-	<td>link=Int widget</td>
+	<td>link=Int</td>
 	<td>1000</td>
 </tr>
 <tr>
 	<td>waitForVisible</td>
-	<td>link=Secret widget</td>
+	<td>link=Secret</td>
 	<td>1000</td>
 </tr>
 <tr>
 	<td>waitForVisible</td>
-	<td>link=Datetime widget</td>
+	<td>link=Datetime</td>
 	<td>1000</td>
 </tr>
 <tr>
 	<td>waitForVisible</td>
-	<td>link=File widget</td>
+	<td>link=File</td>
 	<td>1000</td>
 </tr>
 <tr>
 	<td>waitForVisible</td>
-	<td>link=Htmltext widget</td>
+	<td>link=Htmltext</td>
 	<td>1000</td>
 </tr>
 <tr>
 	<td>waitForVisible</td>
-	<td>link=SelectOneDirectory widget</td>
+	<td>link=Vocabulary</td>
 	<td>1000</td>
 </tr>
 <tr>
 	<td>waitForVisible</td>
-	<td>link=SelectManyDirectory widget</td>
+	<td>link=Multiple vocabulary</td>
 	<td>1000</td>
 </tr>
 <tr>
 	<td>waitForVisible</td>
-	<td>link=Checkbox widget</td>
+	<td>link=Checkbox</td>
 	<td>1000</td>
 </tr>
 <tr>
 	<td>waitForVisible</td>
-	<td>link=List widget</td>
+	<td>link=List</td>
 	<td>1000</td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
+	<td>link=Listing widgets</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
+	<td>link=Author</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>link=Listing widgets</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
+	<td>link=Big icon and document type</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
+	<td>link=Big icon and document type with link</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
+	<td>link=Icon and document type</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
+	<td>link=Last contributor</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
+	<td>link=Lifecycle state</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
+	<td>link=Lock icon</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
+	<td>link=Title with link</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
+	<td>link=Version</td>
+	<td></td>
 </tr>
 <!-- custom widgets -->
 <tr>
@@ -150,12 +205,12 @@
 </tr>
 <tr>
 	<td>verifyNotVisible</td>
-	<td>link=Complex widget</td>
+	<td>link=Complex</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyNotVisible</td>
-	<td>link=Template widget</td>
+	<td>link=Template</td>
 	<td></td>
 </tr>
 <tr>
@@ -164,34 +219,14 @@
 	<td></td>
 </tr>
 <tr>
-	<td>storeEval</td>
-	<td>selenium.browserbot.getCurrentWindow().document.body.innerHTML</td>
-	<td>innerhtml</td>
-</tr>
-<tr>
-	<td>echo</td>
-	<td>${innerhtml}</td>
-	<td></td>
-</tr>
-<tr>
 	<td>waitForVisible</td>
-	<td>link=Complex widget</td>
+	<td>link=Complex</td>
 	<td>1000</td>
 </tr>
 <tr>
 	<td>waitForVisible</td>
-	<td>link=Template widget</td>
+	<td>link=Template</td>
 	<td>1000</td>
-</tr>
-<tr>
-	<td>storeEval</td>
-	<td>selenium.browserbot.getCurrentWindow().document.body.innerHTML</td>
-	<td>innerhtml</td>
-</tr>
-<tr>
-	<td>echo</td>
-	<td>${innerhtml}</td>
-	<td></td>
 </tr>
 
 </tbody></table>
