--- a/src/main/resources/web/nuxeo.war/layoutDemo/introduction.xhtml
+++ b/src/main/resources/web/nuxeo.war/layoutDemo/introduction.xhtml
@@ -3,8 +3,36 @@
   xmlns:ui="http://java.sun.com/jsf/facelets">
 
   <ui:define name="content">
+  
+    <h3>Welcome to the Nuxeo Layout Showcase!</h3>
+  
     <div class="mainContent">
-      TODO: make an introduction text
+    
+      <div>
+        This site presents standard widget types available to the Nuxeo layout service,
+        and can be used as a demo, reference and preview application.
+        <br />
+        You can browse widget types by clicking on items in the left menu.
+      </div>
+      <br />
+
+      <div>
+        Other useful links:
+        <ul>
+          <li>
+            <a href="https://doc.nuxeo.com/x/OoAO" target="_blank">
+              Layouts developer documentation
+            </a>
+          </li>
+          <li>
+            <a href="http://community.nuxeo.com/api/nuxeo/5.4/tlddoc/" target="_blank">
+              Nuxeo JSF tag library documentation
+            </a>
+          </li>
+        </ul>
+      </div>
+      <br />
+
     </div>
   </ui:define>
 
