--- a/src/main/resources/web/nuxeo.war/layoutDemo/global_page_template.xhtml
+++ b/src/main/resources/web/nuxeo.war/layoutDemo/global_page_template.xhtml
@@ -8,15 +8,20 @@
   <ui:define name="page title">
     <h:outputText value="Layout demo" />
   </ui:define>
-  
+
+  <ui:define name="stylesheets">
+    <link rel="stylesheet" type="text/css" href="${baseURL}layoutDemo/style/layoutDemo.css" />
+    <link href="#{baseURL}layoutDemo/style/prettify.css" type="text/css" rel="stylesheet" />
+  </ui:define>
+
+  <ui:define name="header_scripts">
+    <script type="text/javascript" src="#{baseURL}layoutDemo/scripts/layoutDemo.js"></script>
+    <script type="text/javascript" src="#{baseURL}layoutDemo/scripts/prettify.js"></script>
+  </ui:define>
+
   <ui:define name="body">
 
-    <link rel="stylesheet" type="text/css" href="${baseURL}layoutDemo/style/layoutDemo.css" />
-    <script type="text/javascript" src="#{baseURL}layoutDemo/scripts/layoutDemo.js"></script>
-    <link href="#{baseURL}layoutDemo/style/prettify.css" type="text/css" rel="stylesheet" />
-    <script type="text/javascript" src="#{baseURL}layoutDemo/scripts/prettify.js"></script>
-  
-    <table width="100%" style="overflow:hidden;">
+    <table class="layoutDemoPage">
       <tbody>
         <tr>
           <td colspan="2">
